k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ndw-viewer
spec:
  selector:
    app: ndw-viewer
  ports:
    - port: 80
      targetPort: 3000
